fixed the spacing between boxes

--- a/style.css
+++ b/style.css
@@ -12,25 +12,26 @@ body {
 header,
 nav,
 section,
-aside,
-footer {
+aside{
     display: block;
     background: #ebebee;
     text-align: center;
-    padding: 10px;
+    padding: 12px;
     margin: 10px;
     
 }
 /* Designing the "section" part of the section element. */
 section {
-    width: 42%;
+    display: block;
+    width: 40%;
     float: left;
     height: 267px;
 }
 /* Aligning the aside section. */
 aside {
+    display: block;
     float: right;
-    width: 48%;
+    width: 40%;
     overflow: hidden;
     height: 267px;
     
@@ -49,6 +50,7 @@ article {
 
 h1,
 p {
+    display: block;
     background: #ebebeb;
     color: #777;
     padding: 10px;
@@ -58,3 +60,13 @@ p {
 }
 
 
+footer {
+    display: block;
+    background: #ebebee;
+    text-align: center;
+    padding: 12px;
+    margin: 10px;
+    position: fixed;
+    bottom: 360px;
+    width: 916px;
+}
